syntax = "proto3";

import "google/protobuf/empty.proto";

option java_package = "ar.edu.itba.pod.grpc";
option java_multiple_files = true;

service AttractionNotificationService {
  rpc Follow(NotificationRequest) returns (NotificationResponse);
  rpc Unfollow(NotificationRequest) returns (NotificationResponse);
}

message NotificationRequest {
  string ride_name = 1;
  string visitor_id = 2;
  int32 day_of_year = 3;
}

message NotificationResponse {
  string message = 1;
}